<resources>
    <string name="app_name">AgendaContactos</string>
    <string name="create">Create Contact</string>
    <string name="list">List Contacts</string>

    <string name="txtname">Name</string>
    <string name="lastname">LastName</string>
    <string name="phone">Phone</string>
    <string name="cellphone">Cellphone</string>
    <string name="save">Save</string>

    <string name="done">Saved Successfully</string>
<string name="errorPhone">Type a Correct Phone</string>
<string name="errorCellPhone">Type a Correct CellPhone</string>
<string name="emptyFields">Complete all the fields</string>
    <string-array name="Menu">
        <item>@string/create</item>
        <item>@string/list</item>
    </string-array>

    <string name="ListaVacia">No Contacts Yet</string>


</resources>
